--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,44 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+
+		<dependency>
+
+			<groupId>javax.validation</groupId>
+
+			<artifactId>validation-api</artifactId>
+
+			<version>2.0.1.Final</version><!--$NO-MVN-MAN-VER$-->
+
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+
+		<dependency>
+
+			<groupId>org.hibernate</groupId>
+
+			<artifactId>hibernate-validator</artifactId>
+
+			<version>7.0.1.Final</version>
+
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api -->
+
+		<dependency>
+
+			<groupId>jakarta.validation</groupId>
+
+			<artifactId>jakarta.validation-api</artifactId>
+
+			<version>3.0.0</version><!--$NO-MVN-MAN-VER$-->
+
+		</dependency>
 	</dependencies>
 
 	<build>
